[tool.poetry]
name = "electronics-store"
version = "0.1.0"
description = ""
authors = ["Denis <wolf1323@mail.ru>"]
readme = "README.md"
packages = [{include = "electronics_store"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
